# libcalc

./: .gitignore  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
doc/: Makefile.am  Makefile.in  libcalc-docs.xml
lib/: .gitignore
src/: Makefile.am  Makefile.in  calc-exponent.c  calc-exponent.h  calc-expr.c  calc-expr.h  calc-fraction.c  calc-fraction.h  calc-number-add.c  calc-number-cmp.c  calc-number-div.c  calc-number-mul.c  calc-number-sub.c  calc-number-trans.c  calc-number.c  calc-number.h  calc-sum.c  calc-sum.h  calc-term.c  calc-term.h  calc-variable.c  calc-variable.h  libcalc.h  libcalc.pc.in
test/: Makefile.am  Makefile.in  assert.c  eval-arith.c  eval-exp.c  eval-frac.c  eval-num.c  eval-sum.c  eval-var.c  libtest.h  num-abs-f.c  num-abs-z.c  num-add-n.c  num-add-q.c  num-add-si.c  num-add-ui.c  num-cast.c  num-div-dec.c  num-div-int.c  num-div-nogcd.c  num-log10.c  num-log2.c  num-log7.c  num-mul-n.c  num-mul-q.c  num-mul-si.c  num-mul-ui.c  num-neg-f.c  num-neg-z.c  num-pow.c  num-sub-n.c  num-sub-q.c  num-sub-si.c  num-sub-ui.c  num-type.c  number-add.c  number-cast.c  number-div.c  number-init-i.c  number-init-z.c  (+17 more)
