AC_INIT([libcalc], [1.0.0], [xnscdev@gmail.com])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE
AM_SILENT_RULES([yes])

LT_INIT

AC_PROG_CC

PKG_CHECK_MODULES([GLIB], [glib-2.0 >= 2.44])
AC_SUBST([GLIB_CFLAGS])
AC_SUBST([GLIB_LIBS])

PKG_CHECK_MODULES([GOBJECT], [gobject-2.0 >= 2.44])
AC_SUBST([GOBJECT_CFLAGS])
AC_SUBST([GOBJECT_LIBS])

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
